--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <div id="hero">
+      <div id="banner">
+        <img src="./img/odin-lined.png" alt="The Odin Project Logo">
+        <h1>SIGN-UP</h1>
+      </div>
+      <p>
+        Photo by <a href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
+    </div>
+
+    <div id="content">
+      
+    </div>
   </body>
 </html>
