--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="hero">
       <div id="banner">
         <img src="./img/odin-lined.png" alt="The Odin Project Logo">
-        <h1>SIGN-UP</h1>
+        <h1>ODIN</h1>
       </div>
       <p>
         Photo by <a href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
@@ -18,7 +18,43 @@
     </div>
 
     <div id="content">
-      
+      <div>
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+        <p>You <em>know</em> you want to.</p>
+      </div>
+      <div>
+        <form action="" method="get" id="signup-form">
+          <p>Let's do this!</p>
+          <div>
+            <label for="">First Name</label>
+            <input type="text">
+          </div>
+          <div>
+            <label for="">Last Name</label>
+            <input type="text">
+          </div>
+          <div>
+            <label for="">Email</label>
+            <input type="email">
+          </div>
+          <div>
+            <label for="">Phone Number</label>
+            <input type="tel">
+          </div>
+          <div>
+            <label for="">Password</label>
+            <input type="password">
+          </div>
+          <div>
+            <label for="">Confirm Password</label>
+            <input type="password">
+          </div>
+        </form>
+      </div>
+      <div>
+        <button type="submit" form="signup-form">Create Account</button>
+        <p>Already have an account? Log in.</p>
+      </div>
     </div>
   </body>
 </html>
