--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="hero">
@@ -18,42 +21,48 @@
     </div>
 
     <div id="content">
-      <div>
-        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
-        <p>You <em>know</em> you want to.</p>
+      <div id="comm">
+        <h3>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h3>
+        <h3>You <em>know</em> you want to.</h3>
       </div>
-      <div>
+      <div id="input">
+        <h3>Let's do this!</h3>
         <form action="" method="get" id="signup-form">
-          <p>Let's do this!</p>
-          <div>
-            <label for="">First Name</label>
-            <input type="text">
+          <div class="form-row">
+            <label for="fname">First Name</label>
+            <input id="fname" name="fname" type="text">
+            <span></span>
           </div>
-          <div>
-            <label for="">Last Name</label>
-            <input type="text">
+          <div class="form-row">
+            <label for="lname">Last Name</label>
+            <input id="lname" name="lname" type="text">
+            <span></span>
           </div>
-          <div>
-            <label for="">Email</label>
-            <input type="email">
+          <div class="form-row">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email">
+            <span></span>
           </div>
-          <div>
-            <label for="">Phone Number</label>
-            <input type="tel">
+          <div class="form-row">
+            <label for="phone">Phone Number</label>
+            <input id="phone" name="phone" type="tel">
+            <span></span>
           </div>
-          <div>
-            <label for="">Password</label>
-            <input type="password">
+          <div class="form-row">
+            <label for="pwd1">Password</label>
+            <input id="pwd1" name="pwd1" type="password">
+            <span></span>
           </div>
-          <div>
-            <label for="">Confirm Password</label>
-            <input type="password">
+          <div class="form-row">
+            <label for="pwd2">Confirm Password</label>
+            <input id="pwd2" name="pwd2" type="password">
+            <span></span>
           </div>
         </form>
       </div>
-      <div>
+      <div id="submit">
         <button type="submit" form="signup-form">Create Account</button>
-        <p>Already have an account? Log in.</p>
+        <p>Already have an account? <a href="">Log in</a>.</p>
       </div>
     </div>
   </body>
