Style communication and submit sections

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div id="submit">
         <button type="submit" form="signup-form">Create Account</button>
-        <p>Already have an account? <a href="">Log in</a>.</p>
+        <p>Already have an account? <a href="">Log in</a></p>
       </div>
     </div>
   </body>
